@@ -25,7 +25,7 @@
  * @test
  * @summary test logging of reasons for ignoring Record attribute
  * @library /test/lib
- * @compile superNotJLRecord.jcod recordIgnoredVersion.jcod
+ * @compile recordIgnoredVersion.jcod
  * @run driver ignoreRecordAttribute
  */
 
@@ -37,14 +37,8 @@ public class ignoreRecordAttribute {
     public static void main(String[] args) throws Exception {
         String MAJOR_VERSION = Integer.toString(44 + Runtime.version().feature());
         ProcessBuilder pb = ProcessTools.createJavaProcessBuilder("--enable-preview",
-            "-Xlog:class+record", "-Xshare:off", "superNotJLRecord");
-        OutputAnalyzer output = new OutputAnalyzer(pb.start());
-        output.shouldContain("Ignoring Record attribute");
-        output.shouldContain("because super type is not java.lang.Record");
-
-        pb = ProcessTools.createJavaProcessBuilder("--enable-preview",
             "-Xlog:class+record", "-Xshare:off", "recordIgnoredVersion");
-        output = new OutputAnalyzer(pb.start());
+        OutputAnalyzer output = new OutputAnalyzer(pb.start());
         output.shouldContain("Ignoring Record attribute");
         output.shouldContain("because class file version is not " + MAJOR_VERSION + ".65535");
     }
